[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swin"
version = "0.0.3"
authors = [
  { name="Serge Lunev" },
]
description = "Swin: SoftWare INsights"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib>=3.7.1",
  "numerize>=0.12",
  "numpy>=1.24.2",
  "pandas>=1.5.3",
  "prettytable>=3.6.0",
  "pypistats>=1.2.1",
]

[project.urls]
"Homepage" = "https://github.com/lunarserge/swin"
"Bug Tracker" = "https://github.com/lunarserge/swin/issues"

[project.scripts]
swin = "swin.swin:main"