[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swin"
dynamic = [
    "version",
    "dependencies"
]
authors = [
  { name="Serge Lunev" },
]
description = "Swin: SoftWare INsights"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lunarserge/swin"
"Bug Tracker" = "https://github.com/lunarserge/swin/issues"

[project.scripts]
swin = "swin.swin:main"

[tool.hatch.version]
path = "src/swin/swin.py"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}